@@ -3,11 +3,9 @@ package com.demo.departments.demoDepartments.controller;
 import com.demo.departments.demoDepartments.controller.swagger.api.PermissionsControllerEndpoint;
 import com.demo.departments.demoDepartments.service.PermissionsService;
 import com.demo.departments.demoDepartments.service.dto.security.PermissionsDTO;
-import com.demo.departments.demoDepartments.service.dto.mapper.MappingLevel;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Pattern;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -15,7 +13,9 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 /**
  * REST controller for managing Permissions entities
@@ -29,71 +29,64 @@ public class PermissionsController implements PermissionsControllerEndpoint {
     private final PermissionsService permissionsService;
 
     /**
-     * GET /api/permissions/:id/full : Get the permissions with specified attributes
-     *
-     * @param id the id of the permissions to retrieve
-     * @param attributes the attributes to include (comma-separated)
-     * @return the ResponseEntity with status 200 (OK) and the permissions in body,
-     * or with status 404 (Not Found)
+     * Helper method to parse comma-separated attributes into a Set
      */
-    @Override
-    @GetMapping("/{id}/full")
-    public ResponseEntity<PermissionsDTO> getPermissionsWithAttributes(
-            @PathVariable @NotNull @Min(1) Long id,
-            @RequestParam(name = "attributes", required = false) String attributes) {
-        List<String> attributeList = attributes != null
-                ? Arrays.asList(attributes.split(","))
-                : List.of();
-        PermissionsDTO permissions = permissionsService.findByIdFull(id, attributeList);
-        return ResponseEntity.ok(permissions);
+    private Set<String> parseAttributesParam(String attributes) {
+        if (attributes == null || attributes.trim().isEmpty()) {
+            return null;
+        }
+        return new HashSet<>(Arrays.asList(attributes.split(",")));
     }
+
 
     @Override
     @GetMapping("/role/{roleId}")
     public ResponseEntity<List<PermissionsDTO>> getPermissionsByRoleId(
             @PathVariable @NotNull @Min(1) Long roleId,
-            @RequestParam(name = "level", defaultValue = "SUMMARY")
-            @Pattern(regexp = "^(MINIMAL|BASIC|SUMMARY|COMPLETE)$", message = "Mapping level must be one of: MINIMAL, BASIC, SUMMARY, COMPLETE")
-            String level) {
-        MappingLevel mappingLevel = MappingLevel.valueOf(level.toUpperCase());
-        List<PermissionsDTO> permissions = permissionsService.findByRoleId(roleId, mappingLevel);
+            @RequestParam(name = "withAudit", defaultValue = "false") boolean withAudit,
+            @RequestParam(name = "attributes", required = false) String attributes) {
+        
+        Set<String> attributeSet = parseAttributesParam(attributes);
+        List<PermissionsDTO> permissions = permissionsService.findByRoleId(roleId, withAudit, attributeSet);
         return ResponseEntity.ok(permissions);
     }
 
     /**
-     * GET /api/permissions : Get all permissions with the specified mapping level
+     * GET /api/permissions : Get all permissions with configurable options
      *
-     * @param level the mapping level (MINIMAL, BASIC, SUMMARY, COMPLETE)
+     * @param withAudit If true, include audit information
+     * @param attributes Comma-separated list of attributes to include
      * @return the ResponseEntity with status 200 (OK) and the list of permissions in body
      */
     @Override
     @GetMapping
     public ResponseEntity<List<PermissionsDTO>> getAllPermissions(
-            @RequestParam(name = "level", defaultValue = "SUMMARY")
-            @Pattern(regexp = "^(MINIMAL|BASIC|SUMMARY|COMPLETE)$", message = "Mapping level must be one of: MINIMAL, BASIC, SUMMARY, COMPLETE")
-            String level) {
-        MappingLevel mappingLevel = MappingLevel.valueOf(level.toUpperCase());
-        List<PermissionsDTO> permissions = permissionsService.findAll(mappingLevel);
+            @RequestParam(name = "withAudit", defaultValue = "false") boolean withAudit,
+            @RequestParam(name = "attributes", required = false) String attributes) {
+        
+        Set<String> attributeSet = parseAttributesParam(attributes);
+        List<PermissionsDTO> permissions = permissionsService.findAll(withAudit, attributeSet);
         return ResponseEntity.ok(permissions);
     }
 
     /**
-     * GET /api/permissions/:id : Get the permissions with the specified id and mapping level
+     * GET /api/permissions/:id : Get a permission by ID with configurable options
      *
-     * @param id the id of the permissions to retrieve
-     * @param level the mapping level (MINIMAL, BASIC, SUMMARY, COMPLETE)
-     * @return the ResponseEntity with status 200 (OK) and the permissions in body,
+     * @param id the id of the permission to retrieve
+     * @param withAudit If true, include audit information
+     * @param attributes Comma-separated list of attributes to include
+     * @return the ResponseEntity with status 200 (OK) and the permission in body,
      * or with status 404 (Not Found)
      */
     @Override
     @GetMapping("/{id}")
     public ResponseEntity<PermissionsDTO> getPermissions(
             @PathVariable @NotNull @Min(1) Long id,
-            @RequestParam(name = "level", defaultValue = "SUMMARY")
-            @Pattern(regexp = "^(MINIMAL|BASIC|SUMMARY|COMPLETE)$", message = "Mapping level must be one of: MINIMAL, BASIC, SUMMARY, COMPLETE")
-            String level) {
-        MappingLevel mappingLevel = MappingLevel.valueOf(level.toUpperCase());
-        PermissionsDTO permissions = permissionsService.findById(id, mappingLevel);
+            @RequestParam(name = "withAudit", defaultValue = "false") boolean withAudit,
+            @RequestParam(name = "attributes", required = false) String attributes) {
+        
+        Set<String> attributeSet = parseAttributesParam(attributes);
+        PermissionsDTO permissions = permissionsService.findById(id, withAudit, attributeSet);
         return ResponseEntity.ok(permissions);
     }
 
